style: fix split screen's shadow on mobile

--- a/mostra-espirita/2023/fep-mostra-espirita-2023-frontend-web/src/app/views/pages/split-page/split-page.component.scss
+++ b/mostra-espirita/2023/fep-mostra-espirita-2023-frontend-web/src/app/views/pages/split-page/split-page.component.scss
@@ -21,8 +21,10 @@
 @media (max-width: 768px) {
     .left {
         height: 50%;
+        box-shadow: inset 0px -20px 15px -3px #8b786a;
     }
     .right {
         height: 50%;
+        box-shadow: inset 0px 20px 15px -3px #8b786a;
     }
 }
